# token-rotator

./: .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Makefile  PROJECT  README.md  go.mod  go.sum  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  gitleaks.yml  govulncheck.yml  image.yml  lint.yml  osv-scanner.yml  test-e2e.yml  test.yml
api/v1alpha1/: gitlabprojectaccesstoken_types.go  groupversion_info.go  tokenbase_types.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: gitlabprojectaccesstoken_admin_role.yaml  gitlabprojectaccesstoken_editor_role.yaml  gitlabprojectaccesstoken_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: kustomization.yaml  token-rotator_v1alpha1_gitlabprojectaccesstoken.yaml
deploy/crds/: token.yaml
docs/: CNAME  index.md
docs/design/: aggregation.md  crd-per-source.md  index.md  naming.md  open-questions-resolutions.md  shared-spec.md
docs/getting-started/: deploy.md  index.md  install.md  tear-down.md  try-it.md
docs/guides/: argocd-integration.md  bootstrap-credentials.md  eso-pushsecret-composition.md  index.md  observability.md  (+1 more)
examples/: manual-token.yaml  sample-token.yaml
hack/: boilerplate.go.txt
src/: export_crds.py  generate_examples.py
(+26 files in other folders)
