[project]
name = "token-rotator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "devonwarren", email = "devon.warren@gmail.com" }
]
dependencies = [
    "pydantic>=2.7.0",
    "icecream>=2.1.3",
    "kubernetes>=29.0.0",
    "jsonpointer>=2.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/token_rotator"]
