[project]
name = "token-rotator"
version = "0.1.0"
description = "A Kubernetes operator for automatic token rotation, similar to cert-manager, supporting multiple token sources as plugins"
authors = [{ name = "devonwarren", email = "devon.warren@gmail.com" }]
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "pydantic>=2.7.0",
    "icecream>=2.1.3",
    "kubernetes>=29.0.0",
    "jsonpointer>=2.4",
]
